#3723 [Lang] add: lang for new document templates

--- a/langs/fr_FR/digiriskdolibarr.lang
+++ b/langs/fr_FR/digiriskdolibarr.lang
@@ -1445,14 +1445,16 @@ TicketPublicInterfaceOtherName = Interface de gestion des registres SST et DGI
 # Ticket document
 
 # Data - Donnée
-TicketDocument            = Fiche du ticket
-Ticketdocument            = Fiche du ticket
-ticketdocument.odt        = Fiche du ticket
-ticketdocument_custom.odt = Fiche personnalisée du ticket
-ticketdocument_events.odt = Fiche du ticket avec événements
-TicketSuccessMessageData  = Message du ticket
-TicketSuccessMessage      = Message de succès du ticket
-TicketSuccessMessageSet   = Le message a bien été modifié
+TicketDocument                 = Fiche du ticket
+Ticketdocument                 = Fiche du ticket
+ticketdocument.odt             = Fiche du ticket
+ticketdocument_custom.odt      = Fiche personnalisée du ticket
+ticketdocument_events.odt      = Fiche du ticket avec événements
+ticketdocument_sign.odt        = Fiche du ticket avec signature
+ticketdocument_event_sign.odt  = Fiche du ticket avec événement et signature
+TicketSuccessMessageData       = Message du ticket
+TicketSuccessMessage           = Message de succès du ticket
+TicketSuccessMessageSet        = Le message a bien été modifié
 
 
 # Project document
