#4476 [Ticket] fix: disable group picker and add button to go to admin page

--- a/langs/fr_FR/digiriskdolibarr.lang
+++ b/langs/fr_FR/digiriskdolibarr.lang
@@ -1386,6 +1386,7 @@ PublicTicket                             = Interface publique des tickets
 TicketPublicInterfaceForbidden           = Accès interdit à l'interface publique des tickets
 DefaultUserGroup                         = Groupe par défaut
 DefaultUserGroupDescription              = Groupe par défaut dans les selecteurs de groupes
+ConfigureDefaultUserGroup                = Configurer le groupe par défaut
 
 #Public interface - Interface publique
 TicketPublicInterfaceShowCategoryDescription     = Afficher la description des catégories de ticket dans l'interface publique
