#4366 [EnvrionmentRisk] add: rights on environment risk

--- a/langs/fr_FR/digiriskdolibarr.lang
+++ b/langs/fr_FR/digiriskdolibarr.lang
@@ -929,7 +929,8 @@ UpdateData   = Mettre à jour
 #
 
 # Rights  - Droits
-RisksMin = risques
+RisksMin              = risques
+RisksEnvironmentalMin = risques environnementaux
 
 # Data - Donnée
 Risks                                    = Risques
