--- a/langs/fr_FR/digiriskdolibarr.lang
+++ b/langs/fr_FR/digiriskdolibarr.lang
@@ -1390,9 +1390,14 @@ TicketCategoriesNotCreated               = Vous n'avez pas créé de catégories
 TicketPublicInterfaceQRCode              = QR Code de l'interface publique des tickets
 MultiEntityTicketPublicInterfaceQRCode   = QR Code de l'interface publique des tickets multi-société
 PublicInterfaceConfiguration             = Champs visibles / requis de l'interface publique
-ExternalLinkDescription                  = Utiliser la catégorie de ticket avec un lien externe
-ExternalLinkInNewTab                     = Lien externe dans un nouvel onglet
+
+PublicInterfaceUseSignatory              = Demande de signature pour la déclaration du registre
 ValidateText                             = Conditions à accepter pour la signature
+TicketPublicInterfaceShowCategory        = Afficher la descritpion de la catégorie
+EmailTemplate                            = Modèle d'e-mail
+EmailTemplateDescription                 = Modèle d'e-mail
+
+OpenInNewTab                             = Ouvrir dans un nouvel onglet
 TicketDigiriskElementRequired            = GP/UT obligatoire pour créer un ticket
 TicketDigiriskElementRequiredHelp        = Activer cette option pour rendre obligatoire la selection d'un GP/UT pour créer un ticket dans l'interface publique
 TicketDigiriskElementHideRef             = Cacher la référence des GP/UT dans le sélecteur de service l'interface publique
